syntax = "proto3"; // Specify compiler version

package coordinationchain;

service CoordinationChain {
    rpc SyncNetwork(GeneralRequest) returns (GeneralResponse) {} // Download all chains
    rpc GetPeers(GeneralRequest) returns (GeneralResponse) {} // Get all connected peers
    rpc Bytes(GeneralRequest) returns (GeneralResponse) {} // Encode chain to string
    rpc String(GeneralRequest) returns (GeneralResponse) {} // Encode chain to bytes
}

/* BEGIN REQUESTS */

message GeneralRequest {}

/* END REQUESTS */

/* BEGIN RESPONSES */

message GeneralResponse {
    string message = 1; // Response
}

/* END REPSONSES */